--- a/ep.html
+++ b/ep.html
@@ -74,7 +74,7 @@
         </article>
     </main>
     <footer>
-        Site criado por <a href="https://www.instagram.com/joao.paulo10/" target="_blank" rel="external">João Paulo</a> 
+        Site criado por <a href="https://www.linkedin.com/in/jo%C3%A3opaulofs-dev/" target="_blank" rel="external">João Paulo</a> 
     </footer>
 </body>
 </html>
