--- a/rm.html
+++ b/rm.html
@@ -88,7 +88,7 @@
         </article>
     </main>
     <footer>
-        Site criado por <a href="https://www.linkedin.com/in/jo%C3%A3opaulofs-dev/" target="_blank" rel="external">João Paulo</a>
+        Site criado por <a href="https://www.linkedin.com/in/joaopaulofs-dev/" target="_blank" rel="external">João Paulo</a>
     </footer>
 </body>
 </html>
